test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_types/extra_credit/compound_add_double_to_pointer.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[34]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(arr)
  [
  const int(3)
  ]
  =
  {
  const int(1)
  ,
  const int(2)
  ,
  const int(3)
  }
  ;
  int
  *
  identifier(elem)
  =
  identifier(arr)
  ;
  identifier(elem)
  +=
  const double(1.0)
  ;
  return
  const int(0)
  ;
  }
